# hs-config

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
docs/: package-lock.json  package.json  rspress.config.ts
docs/docs/: _meta.json  index.md
docs/docs/guide/: _meta.json
src/: __init__.py  config_base.py  hs_config.py
src/hs_config/: __init__.py
